BUG? Sensor B, Easy Connection, Light Sensor